tests/sources/invalid/types/unary_operator_type_errors.fire
// Type errors for unary operators.
fn notMismatch() -> bool {
    x: int32 = 5;
    y: bool = !x;  //~ ERROR FS-SEM-0010 @15
    return y;
}

fn negateUndefined() -> int32 {
    y: int32 = -undef;  //~ ERROR FS-PARSE-0003 @17
    return y;
}

fn main() -> int32 {
    undef2++;  //~ ERROR FS-PARSE-0003 @5
    return 0;
}
